--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
         <div class="content">
             <div class="title">
 
+                <div class="description">
+                    <h1>As melhores receitas</h1>
+                    <p>Apenda a construir os melhores pratos com receitas criadas por
+                        profissionais do mundo inteiro.
+                    </p>
+                </div>
+                
+                <div class="image">
+                    <img src="assets/chef.png">
+                </div>
+
             </div>
 
             <div class="mostViewed">
