inicio de configuração de pagina about.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <div class="links">
                 <a href="index.html"><img src="assets/logo.png"></a>
-                <a href="sobre.html" class="page">Sobre</a>
+                <a href="about.html" class="page">Sobre</a>
                 <a href="receitas.html" class="page">Receitas</a>
             </div>
         </header>
@@ -112,11 +112,12 @@
                 </div>
             </div>
         </main>
+        <footer>
+            <div class="copyright">
+                <span>Todos direitos reservados, receitas Foodfy</span>
+            </div>
+        </footer>
     </div>
-    
-
-    <footer></footer>
-
 </body>
 
 </html>
