view about.html concluida

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="links">
                 <a href="index.html"><img src="assets/logo.png"></a>
                 <a href="about.html" class="page">Sobre</a>
-                <a href="receitas.html" class="page">Receitas</a>
+                <a href="revenue.html" class="page">Receitas</a>
             </div>
         </header>
     
