--- a/about.html
+++ b/about.html
@@ -7,16 +7,16 @@
 </head>
 <body>
     <div class="wrapper">
-        <header>
+        <header class="about">
             <div class="links aboutLinks">
-                <a href="index.html"><img src="assets/logo.png"></a>
-                <a href="about.html" class="page about">Sobre</a>
-                <a href="receitas.html" class="page">Receitas</a>
+                <a href="index.html" class="logo"><img src="assets/logo.png"></a>
+                <a href="about.html" class="page sobre bold">Sobre</a>
+                <a href="revenue.html" class="page revenue">Receitas</a>
             </div>
         </header>
         <main>
             <div class="content">
-                <div class="text1">
+                <div class="text">
                     <div class="titleText">
                         <span>Sobre o Foodfy</span>                     
                     </div>
@@ -25,7 +25,7 @@
                      </p>
                 </div>
 
-                <div class="text2">
+                <div class="text">
                     <div class="titleText">
                         Como tudo começou…
                     </div>
@@ -34,7 +34,7 @@
                      </p>
                 </div>
 
-                <div class="text3">
+                <div class="text">
                     <div class="titleText">
                         Nossas receitas
                     </div>
