view revenue.html concluido

--- a/about.html
+++ b/about.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <div class="wrapper">
-        <header class="about">
-            <div class="links aboutLinks">
+        <header class="page">
+            <div class="links">
                 <a href="index.html" class="logo"><img src="assets/logo.png"></a>
-                <a href="about.html" class="page sobre bold">Sobre</a>
-                <a href="revenue.html" class="page revenue">Receitas</a>
+                <a href="about.html" class="page about bold">Sobre</a>
+                <a href="revenue.html" class="page">Receitas</a>
             </div>
         </header>
         <main>
