--- a/revenue.html
+++ b/revenue.html
@@ -2,19 +2,166 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Sobre</title>
+    <title>Receitas</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="wrapper">
-        <header>
-            <div class="links aboutLinks">
+        <header class="page">
+            <div class="links">
                 <a href="index.html"><img src="assets/logo.png"></a>
                 <a href="about.html" class="page">Sobre</a>
-                <a href="revenue.html" class="page">Receitas</a>
+                <a href="revenue.html" class="page revenue bold">Receitas</a>
             </div>
         </header>
         <main>
+            <div class="content revenue">
+                <div class="cards">
+                    <div class="card">
+                        <div class="card_image">
+                            <img src="assets/burger.png">
+                        </div>
+                        <div class="card_title">
+                            <span>Triplo bacon burger</span>
+                        </div>
+                        <div class="card_autor">
+                            <span>por Jorge Relato</span>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card_image">
+                            <img src="assets/pizza.png">
+                        </div>
+                        <div class="card_title">
+                            <span>Pizza 4 estações</span>
+                        </div>
+                        <div class="card_autor">
+                            <span>por Fabiana Melo</span>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card_image">
+                            <img src="assets/espaguete.png">
+                        </div>
+                        <div class="card_title">
+                            <span>Espaguete ao alho</span>
+                        </div>
+                        <div class="card_autor">
+                            <span>por Júlia Kinoto</span>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card_image">
+                            <img src="assets/lasanha.png">
+                        </div>
+                        <div class="card_title">
+                            <span>Lasanha mac n' cheese</span>
+                        </div>
+                        <div class="card_autor">
+                            <span>por Juliano Vieira</span>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card_image">
+                            <img src="assets/doce.png">
+                        </div>
+                        <div class="card_title">
+                            <span>Docinhos pão-do-céu</span>
+                        </div>
+                        <div class="card_autor">
+                            <span>por Ricardo Golvea</span>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card_image">
+                            <img src="assets/asinhas.png">
+                        </div>
+                        <div class="card_title">
+                            <span>Asinhas de frango ao barbecue</span>
+                        </div>
+                        <div class="card_autor">
+                            <span>por Vania Steroski</span>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card_image">
+                            <img src="assets/burger.png">
+                        </div>
+                        <div class="card_title">
+                            <span>Triplo bacon burger</span>
+                        </div>
+                        <div class="card_autor">
+                            <span>por Jorge Relato</span>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card_image">
+                            <img src="assets/pizza.png">
+                        </div>
+                        <div class="card_title">
+                            <span>Pizza 4 estações</span>
+                        </div>
+                        <div class="card_autor">
+                            <span>por Fabiana Melo</span>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card_image">
+                            <img src="assets/espaguete.png">
+                        </div>
+                        <div class="card_title">
+                            <span>Espaguete ao alho</span>
+                        </div>
+                        <div class="card_autor">
+                            <span>por Júlia Kinoto</span>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card_image">
+                            <img src="assets/lasanha.png">
+                        </div>
+                        <div class="card_title">
+                            <span>Lasanha mac n' cheese</span>
+                        </div>
+                        <div class="card_autor">
+                            <span>por Juliano Vieira</span>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card_image">
+                            <img src="assets/doce.png">
+                        </div>
+                        <div class="card_title">
+                            <span>Docinhos pão-do-céu</span>
+                        </div>
+                        <div class="card_autor">
+                            <span>por Ricardo Golvea</span>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card_image">
+                            <img src="assets/asinhas.png">
+                        </div>
+                        <div class="card_title">
+                            <span>Asinhas de frango ao barbecue</span>
+                        </div>
+                        <div class="card_autor">
+                            <span>por Vania Steroski</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer>
             <div class="copyright">
