foodfy initial view completed

--- a/revenue.html
+++ b/revenue.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Receitas</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
     <div class="wrapper">
@@ -168,6 +170,27 @@
                 <span>Todos direitos reservados, receitas Foodfy</span>
             </div>
         </footer>
-    </div>   
+    </div>
+    <div class="modal-overlay">
+        <div class="modal">       
+
+            <div class="modal-content">
+                <div class="content-image">
+                    <img src="assets/asinhas.png">
+                </div>                
+                <div class="content-title">
+                    <span class="title">Asinhas de frango ao barbecue</span>
+                </div>
+                <div class="content-autor">
+                    <span class="autor">por Vania Steroski</span>
+                </div>
+            </div>
+
+            <a class="close-modal">
+                <span>Fechar modal</span>
+            </a>
+        </div>
+    </div>
+    <script src="js/script.js"></script>   
 </body>
 </html>
