--- a/about.html
+++ b/about.html
@@ -1,54 +1,95 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Sobre</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <div class="wrapper">
-        <header class="page">
-            <div class="links">
-                <a href="index.html" class="logo"><img src="assets/logo.png"></a>
-                <a href="about.html" class="page about bold">Sobre</a>
-                <a href="revenue.html" class="page">Receitas</a>
+      <header class="page">
+        <div class="links">
+          <a href="index.html" class="logo"><img src="assets/logo.png" /></a>
+          <a href="about.html" class="page about bold">Sobre</a>
+          <a href="revenue.html" class="page">Receitas</a>
+        </div>
+      </header>
+      <main>
+        <div class="content" id="about-content">
+          <div class="text">
+            <div class="titleText">
+              <span>Sobre o Foodfy</span>
             </div>
-        </header>
-        <main>
-            <div class="content">
-                <div class="text">
-                    <div class="titleText">
-                        <span>Sobre o Foodfy</span>                     
-                    </div>
-                    <p>Suspendisse placerat neque neque. Morbi dictum nulla non sapien rhoncus, et mattis erat commodo. Aliquam vel lacus a justo mollis luctus. Proin vel auctor eros, sed eleifend nunc. Curabitur eget tincidunt risus. Mauris malesuada facilisis magna, vitae volutpat sapien tristique eu. Morbi metus nunc, interdum in erat placerat, aliquam iaculis massa. Duis vulputate varius justo pharetra maximus. In vehicula enim nec nibh porta tincidunt. Vestibulum at ultrices turpis, non dictum metus. Vivamus ligula ex, semper vitae eros ut, euismod convallis augue.
-                        Fusce nec pulvinar nunc. Duis porttitor tincidunt accumsan. Quisque pulvinar mollis ipsum ut accumsan. Proin ligula lectus, rutrum vel nisl quis, efficitur porttitor nisl. Morbi ut accumsan felis, eu ultrices lacus. Integer in tincidunt arcu, et posuere ligula. Morbi cursus facilisis feugiat. Praesent euismod nec nisl at accumsan. Donec libero neque, vulputate semper orci et, malesuada sodales eros. Nunc ut nulla faucibus enim ultricies euismod.
-                     </p>
-                </div>
+            <p>
+              Suspendisse placerat neque neque. Morbi dictum nulla non sapien
+              rhoncus, et mattis erat commodo. Aliquam vel lacus a justo mollis
+              luctus. Proin vel auctor eros, sed eleifend nunc. Curabitur eget
+              tincidunt risus. Mauris malesuada facilisis magna, vitae volutpat
+              sapien tristique eu. Morbi metus nunc, interdum in erat placerat,
+              aliquam iaculis massa. Duis vulputate varius justo pharetra
+              maximus. In vehicula enim nec nibh porta tincidunt. Vestibulum at
+              ultrices turpis, non dictum metus. Vivamus ligula ex, semper vitae
+              eros ut, euismod convallis augue. Fusce nec pulvinar nunc. Duis
+              porttitor tincidunt accumsan. Quisque pulvinar mollis ipsum ut
+              accumsan. Proin ligula lectus, rutrum vel nisl quis, efficitur
+              porttitor nisl. Morbi ut accumsan felis, eu ultrices lacus.
+              Integer in tincidunt arcu, et posuere ligula. Morbi cursus
+              facilisis feugiat. Praesent euismod nec nisl at accumsan. Donec
+              libero neque, vulputate semper orci et, malesuada sodales eros.
+              Nunc ut nulla faucibus enim ultricies euismod.
+            </p>
+          </div>
 
-                <div class="text">
-                    <div class="titleText">
-                        Como tudo começou…
-                    </div>
-                    <p>Suspendisse placerat neque neque. Morbi dictum nulla non sapien rhoncus, et mattis erat commodo. Aliquam vel lacus a justo mollis luctus. Proin vel auctor eros, sed eleifend nunc. Curabitur eget tincidunt risus. Mauris malesuada facilisis magna, vitae volutpat sapien tristique eu. Morbi metus nunc, interdum in erat placerat, aliquam iaculis massa. Duis vulputate varius justo pharetra maximus. In vehicula enim nec nibh porta tincidunt. Vestibulum at ultrices turpis, non dictum metus. Vivamus ligula ex, semper vitae eros ut, euismod convallis augue.
-                        Fusce nec pulvinar nunc. Duis porttitor tincidunt accumsan. Quisque pulvinar mollis ipsum ut accumsan. Proin ligula lectus, rutrum vel nisl quis, efficitur porttitor nisl. Morbi ut accumsan felis, eu ultrices lacus. Integer in tincidunt arcu, et posuere ligula. Morbi cursus facilisis feugiat. Praesent euismod nec nisl at accumsan. Donec libero neque, vulputate semper orci et, malesuada sodales eros. Nunc ut nulla faucibus enim ultricies euismod.
-                     </p>
-                </div>
+          <div class="text">
+            <div class="titleText">Como tudo começou…</div>
+            <p>
+              Suspendisse placerat neque neque. Morbi dictum nulla non sapien
+              rhoncus, et mattis erat commodo. Aliquam vel lacus a justo mollis
+              luctus. Proin vel auctor eros, sed eleifend nunc. Curabitur eget
+              tincidunt risus. Mauris malesuada facilisis magna, vitae volutpat
+              sapien tristique eu. Morbi metus nunc, interdum in erat placerat,
+              aliquam iaculis massa. Duis vulputate varius justo pharetra
+              maximus. In vehicula enim nec nibh porta tincidunt. Vestibulum at
+              ultrices turpis, non dictum metus. Vivamus ligula ex, semper vitae
+              eros ut, euismod convallis augue. Fusce nec pulvinar nunc. Duis
+              porttitor tincidunt accumsan. Quisque pulvinar mollis ipsum ut
+              accumsan. Proin ligula lectus, rutrum vel nisl quis, efficitur
+              porttitor nisl. Morbi ut accumsan felis, eu ultrices lacus.
+              Integer in tincidunt arcu, et posuere ligula. Morbi cursus
+              facilisis feugiat. Praesent euismod nec nisl at accumsan. Donec
+              libero neque, vulputate semper orci et, malesuada sodales eros.
+              Nunc ut nulla faucibus enim ultricies euismod.
+            </p>
+          </div>
 
-                <div class="text">
-                    <div class="titleText">
-                        Nossas receitas
-                    </div>
-                    <p>Suspendisse placerat neque neque. Morbi dictum nulla non sapien rhoncus, et mattis erat commodo. Aliquam vel lacus a justo mollis luctus. Proin vel auctor eros, sed eleifend nunc. Curabitur eget tincidunt risus. Mauris malesuada facilisis magna, vitae volutpat sapien tristique eu. Morbi metus nunc, interdum in erat placerat, aliquam iaculis massa. Duis vulputate varius justo pharetra maximus. In vehicula enim nec nibh porta tincidunt. Vestibulum at ultrices turpis, non dictum metus. Vivamus ligula ex, semper vitae eros ut, euismod convallis augue.
-                        Fusce nec pulvinar nunc. Duis porttitor tincidunt accumsan. Quisque pulvinar mollis ipsum ut accumsan. Proin ligula lectus, rutrum vel nisl quis, efficitur porttitor nisl. Morbi ut accumsan felis, eu ultrices lacus. Integer in tincidunt arcu, et posuere ligula. Morbi cursus facilisis feugiat. Praesent euismod nec nisl at accumsan. Donec libero neque, vulputate semper orci et, malesuada sodales eros. Nunc ut nulla faucibus enim ultricies euismod.
-                     </p>
-                </div>
-            </div>
-        </main>
-        <footer>
-            <div class="copyright">
-                <span>Todos direitos reservados, receitas Foodfy</span>
-            </div>
-        </footer>
-    </div>   
-</body>
+          <div class="text">
+            <div class="titleText">Nossas receitas</div>
+            <p>
+              Suspendisse placerat neque neque. Morbi dictum nulla non sapien
+              rhoncus, et mattis erat commodo. Aliquam vel lacus a justo mollis
+              luctus. Proin vel auctor eros, sed eleifend nunc. Curabitur eget
+              tincidunt risus. Mauris malesuada facilisis magna, vitae volutpat
+              sapien tristique eu. Morbi metus nunc, interdum in erat placerat,
+              aliquam iaculis massa. Duis vulputate varius justo pharetra
+              maximus. In vehicula enim nec nibh porta tincidunt. Vestibulum at
+              ultrices turpis, non dictum metus. Vivamus ligula ex, semper vitae
+              eros ut, euismod convallis augue. Fusce nec pulvinar nunc. Duis
+              porttitor tincidunt accumsan. Quisque pulvinar mollis ipsum ut
+              accumsan. Proin ligula lectus, rutrum vel nisl quis, efficitur
+              porttitor nisl. Morbi ut accumsan felis, eu ultrices lacus.
+              Integer in tincidunt arcu, et posuere ligula. Morbi cursus
+              facilisis feugiat. Praesent euismod nec nisl at accumsan. Donec
+              libero neque, vulputate semper orci et, malesuada sodales eros.
+              Nunc ut nulla faucibus enim ultricies euismod.
+            </p>
+          </div>
+        </div>
+      </main>
+      <footer>
+        <div class="copyright">
+          <span>Todos direitos reservados, receitas Foodfy</span>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
